--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "monsters-rolodex",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sudett.github.io/monsters-rollodex",
+  "homepage": "https://sudett.github.io/monsters",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
